Try harder, even harder, to get a mimetype

Apparently, some versions of Qt, when you pass the check-the-content
flag, don't check the extension if the target file doesn't exist, so
return an empty mimetype. So, after checking with content, if the
result is bogus, check for the extension.

BUG:384818